--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,8 +15,9 @@ github:    https://github.com/openafox/put_app
 
 baseurl: "/put_app"
 url: http://openafox.com/put_app
-images: "/resources/img"
 
+# Images
+images: "/put_app/resources/img"
 
 # Site configurations
 plugins:
